# dotutil-cz-py

./: README.md  pyproject.toml
.chezmoiscripts/: run_after_10_apply_root.py  run_after_10_apply_root.py.tmpl  run_after_90_restic_restore.py.tmpl  run_before_50_copy_root.py  run_before_50_copy_root.py.tmpl  run_once_after_30_setup_restic.py.tmpl  run_once_after_40_setup_syncthing.py.tmpl  run_once_after_50_setups.py.tmpl  run_once_after_90_restic_restore.py.tmpl  run_once_before_10_install_prerequisites_win.py  run_once_before_10_install_prerequisites_win.py.tmpl  run_once_before_30_restic_restore.py.tmpl  run_once_before_50_setup_root.py  run_once_install.py
dotutil/: __init__.py  dotroot.py  elevate.py  run_after_10_apply_root.py  run_once_after_50_setups.py.tmpl  task_scheduler.py  test_util.py  util.py
dotutil_cz/: disk_keepalive.py  dotroot.py  elevate.py  restic_backup.py  task_scheduler.py  update_jellyfin_metadata.py  util.py
tests/: test_elevate.py  test_util.py
