[tool.poetry]
name = "dotutil-cz"
version = "0.2.1"
description = "chezmoi dotfiles util for python"
authors = ["navyd <dhjnavyd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.9.5"
pywin32 = { version = "^306", markers = "sys_platform == 'win32'" }
docker = "^6.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
update-jellyfin-metadata = 'dotutil_cz.update_jellyfin_metadata:main'
disk-keepalive = 'dotutil_cz.disk_keepalive:main'
restic-backup = 'dotutil_cz.restic_backup:main'


[tool.pytest.ini_options]
# [Logging within pytest tests](https://stackoverflow.com/a/51633600/8566831)
# https://docs.pytest.org/en/7.1.x/how-to/logging.html#live-logs
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s.%(msecs)03d [%(levelname)-5s] [%(name)s.%(funcName)s]: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
# https://docs.pytest.org/en/7.3.x/explanation/goodpractices.html#tests-outside-application-code
addopts = ["--import-mode=importlib"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
